--- a/src/app/components/virtual/virtual.component.html
+++ b/src/app/components/virtual/virtual.component.html
@@ -26,7 +26,7 @@
       class="btn btn-outline-primary mb-3"
       (click)="toStart()"
     >
-      Ir al iniio
+      Ir al inicio
     </button>
   </div>
 </div>
